--- a/src/main/resources/dart2-v3template/pubspec.mustache
+++ b/src/main/resources/dart2-v3template/pubspec.mustache
@@ -5,9 +5,7 @@ environment:
   sdk: '>=2.2.0 <3.0.0'
 dependencies:
   http: '>=0.11.1 <0.13.0'
-  dart_openapi_common:
-    path:
-      ../dart_openapi_common
+  openapi_dart_common: ^1.0.1
   equatable: ^0.1.0
 dev_dependencies:
   test: ^1.3.0
