significant re-engineering of equals and hashcode so they work in sets and lists.

--- a/src/main/resources/dart2-v3template/apilib.mustache
+++ b/src/main/resources/dart2-v3template/apilib.mustache
@@ -2,8 +2,8 @@ library {{pubName}}.api;
 
 import 'dart:async';
 import 'package:http/http.dart';
-import 'package:equatable/equatable.dart';
 import 'package:openapi_dart_common/openapi.dart';
+import 'package:collection/collection.dart';
 
 part 'api_client.dart';
 
