--- a/src/main/resources/dart2-v3template/pubspec.mustache
+++ b/src/main/resources/dart2-v3template/pubspec.mustache
@@ -6,6 +6,6 @@ environment:
 dependencies:
   http: '>=0.11.1 <0.13.0'
   openapi_dart_common: ^1.0.1
-  equatable: ^0.1.0
+  collection: ^1.14.11
 dev_dependencies:
   test: ^1.3.0
