full serialization support in-model which also supports enums.

--- a/src/main/resources/dart2-v3template/api.mustache
+++ b/src/main/resources/dart2-v3template/api.mustache
@@ -51,7 +51,7 @@ class {{classname}} {
     String contentType = contentTypes.isNotEmpty ? contentTypes[0] : null;
     List<String> authNames = [{{#authMethods}}"{{name}}"{{#hasMore}}, {{/hasMore}}{{/authMethods}}];
 
-    if(contentType.startsWith("multipart/form-data")) {
+    if(contentType != null && contentType.startsWith("multipart/form-data")) {
       bool hasFields = false;
       MultipartRequest mp = MultipartRequest(null, null);
       {{#formParams}}
