--- a/src/main/resources/dart2-v3template/pubspec.mustache
+++ b/src/main/resources/dart2-v3template/pubspec.mustache
@@ -5,8 +5,7 @@ environment:
   sdk: '>=2.2.0 <3.0.0'
 dependencies:
   http: '>=0.11.1 <0.13.0'
-  openapi_dart_common:
-    path: /Users/richard/projects/dart/openapi_dart_common
+  openapi_dart_common: ^1.1.0
 collection: ^1.14.11
 dev_dependencies:
   test: ^1.3.0
