--- a/src/main/resources/dart2-v3template/apilib.mustache
+++ b/src/main/resources/dart2-v3template/apilib.mustache
@@ -1,7 +1,7 @@
 library {{pubName}}.api;
 
 import 'dart:async';
-import 'package:http/http.dart';
+import 'package:dio/dio.dart';
 import 'package:openapi_dart_common/openapi.dart';
 import 'package:collection/collection.dart';
 
