--- a/src/main/resources/dart2-v3template/pubspec.mustache
+++ b/src/main/resources/dart2-v3template/pubspec.mustache
@@ -4,8 +4,8 @@ description: {{pubDescription}}
 environment:
   sdk: '>=2.2.0 <3.0.0'
 dependencies:
-  http: '>=0.11.1 <0.13.0'
-  openapi_dart_common: ^1.1.0
+  dio: '>= 3.0.3 <4.0.0'
+  openapi_dart_common: ^2.0.0
 collection: ^1.14.11
 dev_dependencies:
   test: ^1.3.0
