sort out issues from 4.2.0 with tests

--- a/src/main/resources/dart2-v3template/api_test.mustache
+++ b/src/main/resources/dart2-v3template/api_test.mustache
@@ -1,11 +1,12 @@
 import 'package:{{pubName}}/api.dart';
+import 'package:openapi_dart_common/openapi.dart';
 import 'package:test/test.dart';
 
 {{#operations}}
 
 /// tests for {{classname}}
 void main() {
-  var instance = {{classname}}();
+  var instance = {{classname}}(ApiClient(deserializeDelegate: LocalApiClient()));
 
   group('tests for {{classname}}', () {
     {{#operation}}
