--- a/src/main/resources/dart2-v3template/enum.mustache
+++ b/src/main/resources/dart2-v3template/enum.mustache
@@ -7,10 +7,10 @@ enum {{classname}} {
 
 class {{classname}}TypeTransformer {
   static Map<String, {{classname}}> fromJsonMap = {  {{#allowableValues}}
-  {{#enumVars}}"{{{name}}}":{{classname}}.{{{name}}}{{^-last}}, {{/-last}}{{/enumVars}}
+  {{#enumVars}}'{{{name}}}':{{classname}}.{{{name}}}{{^-last}}, {{/-last}}{{/enumVars}}
 {{/allowableValues}} };
   static Map<{{classname}}, String> toJsonMap = {  {{#allowableValues}}
-  {{#enumVars}}{{classname}}.{{{name}}}:"{{{name}}}"{{^-last}}, {{/-last}}{{/enumVars}}
+  {{#enumVars}}{{classname}}.{{{name}}}:'{{{name}}}'{{^-last}}, {{/-last}}{{/enumVars}}
 {{/allowableValues}} };
 
   static {{classname}} fromJson(dynamic data) {
@@ -26,11 +26,11 @@ class {{classname}}TypeTransformer {
   }
 
   static List<{{classname}}> listFromJson(List<dynamic> json) {
-    return json == null ? List<{{classname}}>() : json.map((value) => fromJson(value)).toList();
+    return json == null ? <{{classname}}>[] : json.map((value) => fromJson(value)).toList();
   }
 
   static Map<String, {{classname}}> mapFromJson(Map<String, dynamic> json) {
-    var map = Map<String, {{classname}}>();
+    final map = <String, {{classname}}>{};
     if (json != null && json.isNotEmpty) {
       json.forEach((String key, dynamic value) => map[key] = fromJson(value));
     }
