--- a/src/main/resources/dart2-v3template/api.mustache
+++ b/src/main/resources/dart2-v3template/api.mustache
@@ -24,7 +24,7 @@ class {{classname}} {
     {{/allParams}}
 
     // create path and map variables
-    final path = '{{{path}}}'{{#pathParams}}.replaceAll('{' + '{{baseName}}' + '}', {{{paramName}}}.toString()){{/pathParams}};
+    final __path = '{{{path}}}'{{#pathParams}}.replaceAll('{' + '{{baseName}}' + '}', {{{paramName}}}.toString()){{/pathParams}};
 
     // query params
     final queryParams = <QueryParam>[];
@@ -86,7 +86,7 @@ class {{classname}} {
     opt.headers = headerParams;
     opt.method = '{{httpMethod}}';
 
-    var response = await apiClient.invokeAPI(path,
+    var response = await apiClient.invokeAPI(__path,
                                              queryParams,
                                              postBody,
                                              headerParams,
